[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cs248a-renderer",
    "diffusers>=0.37.1",
    "jupyterlab>=4.5.7",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "openvdb",
    "torch>=2.8.0",
]

[tool.uv.sources]
cs248a-renderer = { path = "external/cs248a-renderer/" }
openvdb = { path = "external/openvdb" }
