[project]
name = "cs231nfinal"
version = "0.1.0"
description = "Volumetric Neural Style Transfer: final project for Stanford CS231N"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cs248a-renderer",
    "diffusers>=0.37.1",
    "numpy>=2.0.2",
    "openvdb",
    "torch>=2.8.0",
]

[tool.uv.sources]
cs248a-renderer = { path = "external/cs248a-renderer/" }
openvdb = { path = "external/openvdb" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyterlab>=4.5.7",
    "matplotlib>=3.10.9",
    "nptyping>=2.0.1",
    "ruff>=0.15.13",
    "ty>=0.0.37",
]

[tool.ruff]
include = ["src/**.py"]

[tool.ty.src]
include = ["src"]
respect-ignore-files = false

[tool.pyright]
extraPaths = ["src/"]
typeCheckingMode = "standard"
reportMissingModuleSource = "information"
